ajuste de resolução do monitor e o nome do cartao pix

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,22 +1,22 @@
 {
   "workbench.colorCustomizations": {
-    "activityBar.activeBackground": "#610707",
-    "activityBar.background": "#500606",
-    "activityBar.foreground": "#15202b",
-    "activityBar.inactiveForeground": "#15202b99",
-    "activityBarBadge.background": "#45fa90",
-    "activityBarBadge.foreground": "#15202b",
-    "commandCenter.border": "#15202b99",
-    "sash.hoverBorder": "#610707",
-    "statusBar.background": "#831111",
-    "statusBar.foreground": "#15202b",
-    "statusBarItem.hoverBackground": "#831111",
-    "statusBarItem.remoteBackground": "#831111",
-    "statusBarItem.remoteForeground": "#15202b",
-    "titleBar.activeBackground": "#831111",
-    "titleBar.activeForeground": "#15202b",
-    "titleBar.inactiveBackground": "#45fa90",
-    "titleBar.inactiveForeground": "#15202b99"
+    "activityBar.activeBackground": "#910a0a",
+    "activityBar.background": "#910a0a",
+    "activityBar.foreground": "#e7e7e7",
+    "activityBar.inactiveForeground": "#e7e7e799",
+    "activityBarBadge.background": "#000000",
+    "activityBarBadge.foreground": "#e7e7e7",
+    "commandCenter.border": "#e7e7e799",
+    "sash.hoverBorder": "#910a0a",
+    "statusBar.background": "#610707",
+    "statusBar.foreground": "#e7e7e7",
+    "statusBarItem.hoverBackground": "#910a0a",
+    "statusBarItem.remoteBackground": "#610707",
+    "statusBarItem.remoteForeground": "#e7e7e7",
+    "titleBar.activeBackground": "#610707",
+    "titleBar.activeForeground": "#e7e7e7",
+    "titleBar.inactiveBackground": "#61070799",
+    "titleBar.inactiveForeground": "#e7e7e799"
   },
   "peacock.color": "#610707"
 }
