--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nebular/theme": "^13.0.0",
     "eva-icons": "^1.1.3",
     "express": "^4.18.2",
+    "jspdf": "^2.5.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
