--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eva-icons": "^1.1.3",
     "express": "^4.18.2",
     "jspdf": "^2.5.1",
+    "ngx-mask": "^17.0.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
